--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,14 +1,16 @@
 #cachorro {
+	background-color: gold;
 	width: 8em;
-	margin-top: 400px;
-	margin-left: 100px;
+	margin-top: 500px;
+	margin-left: 200px;
 }
 
 #casa {
+	background-color: gold;
 	width: 8em;
 	position: absolute;
-	top: 300px;
-	left: 900px;
+	top: 400px;
+	left: 1000px;
 }
 
 #campo {
